# fervis

./: .pre-commit-config.yaml  README.md
python/: Django.md  FastAPI.md  Flask.md  README.md  pyproject.toml
python/src/fervis/: __init__.py  _configured.py  error_codes.py  errors.py
python/src/fervis/delivery/: __init__.py  answer_question.py
python/src/fervis/django/: __init__.py
python/src/fervis/evaluation/: __init__.py
python/src/fervis/fastapi/: __init__.py
python/src/fervis/flask/: __init__.py
python/src/fervis/host_api/: context.py  credentials.py
python/src/fervis/integrations/: __init__.py  registry.py
python/src/fervis/lineage/: __init__.py  apps.py  enums.py  ids.py  memory_artifacts.py  model_calls.py  models.py  ports.py  proof_projection.py  proof_summary.py  recorder.py  recorder_core.py  records.py  run_chain.py  run_spine.py  step_summary.py
python/src/fervis/lookup/: __init__.py  canonical_data.py  errors.py  model_turn.py  predicate_operators.py  provider_contract.py  question_inputs.py
python/src/fervis/memory/: __init__.py  _serialization.py  activation.py  addresses.py  answer_outputs.py  artifacts.py  identities.py  lineage.py  prior_requests.py  projection.py  prompt_contract.py
python/src/fervis/model_io/: __init__.py  models.py  telemetry.py  turn_artifacts.py  turns.py
python/src/fervis/observability/: __init__.py  django.py  django_prompt_captures.py  event_contracts.py  model_calls.py  prompt_captures.py  query.py  render.py  usage.py  usage_types.py
python/src/fervis/project/: __init__.py  catalog_checks.py  catalog_command.py  catalog_errors.py  config_commands.py  config_io.py  config_schema.py  configuration.py  discovery.py  django_runtime.py  doctor.py  edit_result.py  host_api_context.py  host_runtime.py  importing.py  init.py  integration.py  model_commands.py  source_detection.py  source_paths.py  source_scope.py
python/src/fervis/questions/: __init__.py  clarification_state.py  contracts.py  execution_specs.py  ports.py  projection.py  result_data.py  run_views.py  service.py
python/src/fervis/run_work/: __init__.py  contracts.py  events.py  queued_execution.py  service.py  worker.py
python/tests/: conftest.py  test_agent_actions.py  test_conformance.py  test_conformance_case_schema.py  test_conformance_rejection_oracle.py  test_fervis_auth_config.py  test_fervis_config_io.py  test_fervis_init_json_config.py  test_fervis_persistence_schema.py  test_fervis_project_cli.py  test_fervis_project_config.py  test_project_discovery.py
python/tests/architecture/: test_clarification_boundary.py  test_fresh_schema_baselines.py  test_migration_history.py  test_public_package_imports.py
python/tests/conformance/: MIGRATION.md
python/tests/contracts/: adapters.py  conftest.py  test_question_run_lifecycle_contract.py  test_retail_catalog_contract.py
python/tests/delivery/: test_answer_question.py
python/tests/django_test_project/: settings.py  urls.py
python/tests/evaluation/: test_conversation_resolution_contract_bundle.py  test_goldset_extension_contract.py  test_private_goldsets_not_packaged.py
python/tests/fervis_cli/: _support.py  test_catalog.py  test_entrypoints.py  test_explain.py  test_goldset.py  test_inspect.py  test_runtime_ask.py  test_usage.py  test_worker.py
python/tests/host_api/: test_host_context.py  test_http_read_execution.py  test_relation_catalog_django_adapter.py  test_response_conformance.py  test_subject_scoped_reads.py
python/tests/integrations/: test_registry.py
python/tests/interfaces/: test_answer_question_delivery.py  test_fervis_interfaces.py  test_principal_authority.py
python/tests/lineage/: test_django_persistence.py  test_django_recorder.py  test_execution_proof_graph_payload.py  test_lineage_views.py  test_model_call_artifacts.py  test_recorder_contracts.py  test_step_summaries.py
python/tests/lookup/: prompt_sections.py  source_binding_helpers.py  test_answer_program_expressions.py  test_conversation_resolution_framework_neutrality.py  test_conversation_resolution_pipeline.py  test_pattern_fact_plan_contract.py  test_prompt_rule_contract.py  test_prompting_invocation.py  test_provider_schema_metadata.py  test_service.py  test_source_binding_one_call.py
python/tests/memory/: test_conversation_context_activation.py  test_fact_memory.py
python/tests/model_io/: test_structured_output_validation.py
python/tests/observability/: test_django_query.py  test_model_calls.py  test_usage.py
python/tests/project/: test_auth_probe_validation.py  test_configuration_loading.py  test_database_url_persistence.py  test_flask_doctor.py  test_flask_init.py  test_optional_framework_imports.py  test_project_importing.py
python/tests/run_work/: test_events.py  test_run_work_service.py  test_worker.py
python/tests/runtime/: test_conversation_resolution_observability.py
python/tests/storage/: test_sql_storage.py
python/tests/testkit/: __init__.py  answer_program_contracts.py  answer_program_fixtures.py  assertions.py  case_loader.py  catalog.py  django.py  execution_proof_graph.py  fixtures.py  prompt_surfaces.py  provider_native.py  question_contract.py  question_contract_provider.py  runner.py  serialization.py  terminal_lineage.py  values.py
python/tests/types/: test_enums.py
(+1761 files in other folders)
