[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "fervis"
version = "0.1.5"
description = "Deterministic, auditable LLM answers over REST APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Fervis Labs" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "alembic>=1.18,<2",
  "anthropic>=0.78,<1",
  "cryptography>=44,<49",
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  "openai>=1.59,<2",
  "requests>=2.32,<3",
  "SQLAlchemy>=2.0,<3",
  "tomli>=2,<3",
  "typing-extensions>=4.12,<5",
]

[project.optional-dependencies]
django = [
  "Django>=4.2,<6",
  "djangorestframework>=3.15,<4",
]
fastapi = [
  "asgi-lifespan>=2.1,<3",
  "fastapi>=0.100,<1",
]
flask = [
  "Flask>=1.0,<4",
  "Flask-Login>=0.6,<1",
]
all = [
  "asgi-lifespan>=2.1,<3",
  "Django>=4.2,<6",
  "djangorestframework>=3.15,<4",
  "fastapi>=0.100,<1",
  "Flask>=1.0,<4",
  "Flask-Login>=0.6,<1",
]
dev = [
  "asgi-lifespan>=2.1,<3",
  "Django>=4.2,<6",
  "djangorestframework>=3.15,<4",
  "fastapi>=0.100,<1",
  "Flask>=1.0,<4",
  "Flask-Login>=0.6,<1",
  "pytest>=8,<9",
  "pytest-django>=4.9,<5",
  "PyYAML>=6,<7",
  "ruff>=0.8,<1",
  "mypy>=1.14,<2",
  "types-jsonschema>=4.23,<5",
  "pre-commit>=4,<5",
  "django-stubs>=5,<6",
  "djangorestframework-stubs>=3.15,<4",
]

[project.scripts]
fervis = "fervis.interfaces.cli.main:main"

[project.urls]
Homepage = "https://github.com/fervis-ai/fervis"
Repository = "https://github.com/fervis-ai/fervis"
Issues = "https://github.com/fervis-ai/fervis/issues"

[tool.hatch.build.targets.sdist]
include = [
  "/src/fervis",
  "/README.md",
  "/LICENSE",
]
exclude = [
  "/src/fervis/evaluation/goldsets",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fervis"]
exclude = [
  "/src/fervis/evaluation/goldsets",
]

[tool.hatch.build]
artifacts = [
  "src/fervis/**/*.md",
  "src/fervis/**/*.txt",
  "src/fervis/**/*.mako",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
DJANGO_SETTINGS_MODULE = "tests.django_test_project.settings"
django_find_project = false

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.django_test_project.settings"

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py310"
